--- a/src/app/home/produto/produto.component.html
+++ b/src/app/home/produto/produto.component.html
@@ -1,47 +1,57 @@
 <div>
-    <h4>Cadastro de produto</h4>
-    <form class="form mt-4">
-        <div class="form-group">
-            <span>
-                Nome do produto
-            </span>
-            <input class="form-control" placeholder="Digite o nome do produto"/>
+    <div class="row">
+        <div class="col-6">
+            <h1>Cadastro de produto</h1>
+            <p>
+               Cadastre seu produto no ecommerce
+            </p>
         </div>
-        <div class="form-group">
-            <span>
-                Descrição do produto
-            </span>
-            <input class="form-control"  placeholder="Digite o preço" type="text"/>
+        <div class="col-6">
+            <h4>Cadastro de produto</h4>
+            <form class="form mt-4">
+                <div class="form-group">
+                    <span>
+                        Nome do produto
+                    </span>
+                    <input class="form-control" placeholder="Digite o nome do produto"/>
+                </div>
+                <div class="form-group">
+                    <span>
+                        Descrição do produto
+                    </span>
+                    <input class="form-control"  placeholder="Digite o preço" type="text"/>
+                </div>
+                <div class="form-group">
+                    <span>
+                        Preço do produto
+                    </span>
+                    <input class="form-control"  placeholder="Digite o preço" type="number"/>
+                </div>
+                <div class="form-group">
+                    <span>
+                    Estoque do produto
+                    </span>
+                    <input class="form-control"  placeholder="Quantidade de estoque" type="number"/>
+                </div>
+    
+                <div class="form-group">
+                    <span>
+                        Categoria do produto
+                    </span>
+                    <input class="form-control"  placeholder="Digite o preço" type="number"/>
+                </div>
+    
+                <div class="form-group">
+                    <span>
+                        URL da imagem do produto
+                    </span>
+                    <input class="form-control"  placeholder="Insira a URL do produto" type="number"/>
+                </div>
+    
+                <button type="submit" class="btn btn-primary btn-block mt-4">
+                    Cadastrar Produto 
+                </button>
+            </form>
         </div>
-        <div class="form-group">
-            <span>
-                Preço do produto
-            </span>
-            <input class="form-control"  placeholder="Digite o preço" type="number"/>
-        </div>
-        <div class="form-group">
-            <span>
-               Estoque do produto
-            </span>
-            <input class="form-control"  placeholder="Quantidade de estoque" type="number"/>
-        </div>
-
-        <div class="form-group">
-            <span>
-                Categoria do produto
-            </span>
-            <input class="form-control"  placeholder="Digite o preço" type="number"/>
-        </div>
-
-        <div class="form-group">
-            <span>
-                URL da imagem do produto
-            </span>
-            <input class="form-control"  placeholder="Insira a URL do produto" type="number"/>
-        </div>
-
-        <button type="submit" class="btn btn-primary btn-block mt-4">
-            Cadastrar Produto 
-        </button>
-    </form>
+    </div>
 </div>
