--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,3 @@
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <h1>Cadastro de produto</h1>
-            <p>
-               Cadastre seu produto no ecommerce
-            </p>
-        </div>
-        <div class="col-6">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
+<div class="container mt-5">
+    <router-outlet></router-outlet>
 </div>
