--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<div>
+    <div class="header">
+        <div class="navbar">
+            <div class="navbar-brand">
+
+            </div>
+        </div>
+    </div>
+    <div>
+        <router-outlet></router-outlet>
+    </div>    
+</div>
+
+ 
