Editando a descrição do login

--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -4,7 +4,8 @@
         <h5 class="mt-2, mb-2">Obter as chaves</h5>
         <p>Para obter as chaves de integração o primeiro passo, será
             reliazar o credenciamento na plataforma e após isso irá receber
-            as chaves consumer_key, consumer_secret e code
+            as chaves consumer_key, consumer_secret e code, basta preencher os 3
+            campos e clicar sobre autenticar !!
         </p>
     </div>
     <div class="col-6">
