--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,51 @@
     <div class="header">
         <div class="navbar">
             <div class="navbar-brand">
-
+                <img src="https://img1.gratispng.com/20171221/lle/online-shopping-png-clipart-5a3c2132b441d1.0144124815138900987383.jpg"/>
+                <span>Ecommerce Brasil</span>
             </div>
         </div>
     </div>
     <div>
         <router-outlet></router-outlet>
     </div>    
+    <footer>
+        <div class="row">
+            <div class="col-4">
+                    <h5>Institucional</h5>
+                    <ul>
+                        <li>
+                            Meios de pagamento
+                        </li>
+                        <li>
+                            Sobre a empresa
+                        </li>
+                    </ul>
+            </div>
+            <div class="col-4">
+                <h5>Contato</h5>
+                <ul>
+                    <li>
+                        Segunda a sexta
+                    </li>
+                    <li>
+                       (14) 998816633
+                    </li>
+                    <li>
+                       fabioseigotakamori@outlook.com
+                     </li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <h5>Pagamento</h5>
+                <ul>
+                    <li>
+                        Ecommerce
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </div>
 
  
