--- a/src/app/produtos/produto/produto.component.html
+++ b/src/app/produtos/produto/produto.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-5">
+<app-menu></app-menu>
+<div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-6">
             <h1>Cadastro de produto</h1>
