ajuste no login

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,9 @@
         }
     }
 }
+.container{
+    min-height: 1000px;
+}
 footer{
     height: 200px;
     background-color: rgb(10, 74, 148) ;
