mecanismo de login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,12 @@
                 <img src="https://img1.gratispng.com/20171221/lle/online-shopping-png-clipart-5a3c2132b441d1.0144124815138900987383.jpg"/>
                 <span>Ecommerce Brasil</span>
             </div>
+            <div class="login">
+                <button  class="btn-sair" type="button" (click)="sair()">sair</button>
+            </div>
         </div>
     </div>
-    <div class="container">
+    <div class="estrutura">
         <router-outlet></router-outlet>
     </div>    
     <footer>
